--- a/index.html
+++ b/index.html
@@ -66,57 +66,55 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<h3>Jialian Wu</h3>
 			<p>
-				I'm a Ph.D. student in <a target="_blank" href="https://engineering.tamu.edu/cse/index.html">Computer Science at Texas A&M University</a>
+				Ph.D. Candidate
 				<br>
-				under the supervision of <a target="_blank" href="https://www.atlaswang.com/">Professor Atlas Wang</a>.
+				State University of New York at Buffalo
 				<br>
-				wuyang.chen AT tamu.edu
+				jialianw at buffalo dot edu
 			</p>
 			<p style="padding: 10px 0px 0px 0px;">
-				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>
-				<a target="_blank" href="https://github.com/chenwydj"><img src="./images/github.png" title="name" style="width:5%"/></a>
+<!--				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>-->
+<!--				<a target="_blank" href="https://github.com/chenwydj"><img src="./images/github.png" title="name" style="width:5%"/></a>-->
 				<!-- <a target="_blank" href="mailto:wuyang.chen@tamu.edu"><img src="./images/email.png" title="name" style="width:5%"/></a> -->
+				[<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]
+				[<a href="https://drive.google.com/file/d/1Tp7hLu1LOSbvv7rimGRlCaViEG7mMrpu/view?usp=sharing">Curriculum Vitae</a>]
 			</p>
 		</div>
 		<div class="grid3" id="education">
 			<div class="grid3-header">
-				<h3>Education</h3>
+				<h3>Short Bio</h3>
 				<br/>
 			</div>
 			<div class="grid3-content">
 				<div class="grid3-content">
 					<ul class="graid3-ul">
-						<li class="graid3-li"> Ph.D. student in Computer Science (08/2019 - present),
-								<a target="_blank" href="https://engineering.tamu.edu/cse/index.html">Texas A&M University (TAMU)</a>
+						<li class="graid3-li"> Ph.D. student, State University of New York at Buffalo, 2019 - present
+							<br>advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>
 						</li>
-						<li class="graid3-li">
-							Master’s Degree in Computer Science (01/2016 - 12/2016), 
-								<a target="_blank" href="https://csweb.rice.edu/">Rice University</a>
+						<li class="graid3-li"> M.S. study, Tianjin Univeristy, 2018-2019 (drop)
 						</li>
-						<li class="graid3-li">
-							Bachelor’s Degree in Biosciences (08/2010 - 06/2014)<br/>
-							<a target="_blank" href="https://en.ustc.edu.cn/">University of Science and Technology of China (USTC)</a>
+						<li class="graid3-li"> B.Eng. Degree, Tianjin University, 2014-2018</li>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 
-		<div class="grid3" id="research" style="background:#ffffff">
-			<!-- <h3>Research</h3> -->
-			<div class="grid3-header">
-				<h3>Research Interest</h3>
-				<br/>
-			</div>
-			<!-- <p>My interest mainly lies in low-level image processing, including:</p> -->
-			<div class="grid3-content">
-				<div class="grid3-content">
-					<ul class="graid3-ul">
-						<li class="graid3-li"> Neural Architecture Search </li>
-						<li class="graid3-li"> Self-supervised Learning </li>
-					</ul>
-				</div>
-			</div>
+<!--		<div class="grid3" id="research" style="background:#ffffff">-->
+<!--			&lt;!&ndash; <h3>Research</h3> &ndash;&gt;-->
+<!--			<div class="grid3-header">-->
+<!--				<h3>Research Interest</h3>-->
+<!--				<br/>-->
+<!--			</div>-->
+<!--			&lt;!&ndash; <p>My interest mainly lies in low-level image processing, including:</p> &ndash;&gt;-->
+<!--			<div class="grid3-content">-->
+<!--				<div class="grid3-content">-->
+<!--					<ul class="graid3-ul">-->
+<!--						<li class="graid3-li"> Neural Architecture Search </li>-->
+<!--						<li class="graid3-li"> Self-supervised Learning </li>-->
+<!--					</ul>-->
+<!--				</div>-->
+<!--			</div>-->
 <!--
 			<ul>
 				<li>
@@ -156,202 +154,79 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="grid3-content">
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/publication/asg_icml20.png">
+					  <img class="paper-image" src="images/cvpr20.png">
 					</div>
 					<div class='col-xs-9'>
-					  <div class='paper-title'>Automated Synthetic-to-Real Generalization</div>
-					  <div class='paper-authors'><b>Wuyang Chen</b>, Zhiding Yu, Zhangyang Wang, Animashree Anandkumar</div>
-					  <div class='paper-venue'>ICML 2020</div>
+					  <div class='paper-title'>Temporal-Context Enhanced Detection of Heavily Occluded Pedestrians</div>
+					  <div class='paper-authors'><b>Jialian Wu</b>,Chunluan Zhou, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
+					  <div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020.</div>
 					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2007.06965.pdf">PDF</a>
+						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>
 						<!-- <a class="btn btn-confirm" target="_blank" href="https://github.com/NVlabs/ASG">Code</a> -->
-						<a class="btn btn-confirm" >Code</a>
+						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>
 					  </div>
 					</div>
 				</div>
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/publication/pu_icml20.png">
+					  <img class="paper-image" src="images/Forest_Rcnn.png">
 					</div>
 					<div class='col-xs-9'>
-					  <div class='paper-title'>Self-PU: Self Boosted and Calibrated Positive-Unlabeled Training</div>
-					  <div class='paper-authors'>Xuxi Chen*, <b>Wuyang Chen</b>*, Tianlong Chen, Ye Yuan, Chen Gong, Kewei Chen, Zhangyang Wang</div>
-					  <div class='paper-venue'>ICML 2020</div>
+					  <div class='paper-title'>Forest R-CNN: Large-Vocabulary Long-Tailed Object Detection and Instance Segmentation</div>
+					  <div class='paper-authors'><b>Jialian Wu</b>, Liangchen Song, Tiancai Wang, Qian Zhang, and Junsong Yuan</div>
+					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
 					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2006.11280.pdf">PDF</a>
-						<a class="btn btn-confirm" target="_blank" href="https://github.com/TAMU-VITA/Self-PU">Code</a>
+						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/abs/2008.05676">PDF</a>
+						<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
 					  </div>
 					</div>
 				</div>
+
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/publication/agd_icml20.png">
+					  <img class="paper-image" src="images/SML.png">
 					</div>
 					<div class='col-xs-9'>
-					  <div class='paper-title'>Auto-GAN-Distiller: Searching to Compress Generative Adversarial Networks</div>
-					  <div class='paper-authors'>Yonggan Fu, <b>Wuyang Chen</b>, Haotao Wang, Haoran Li, Yingyan Lin, Zhangyang Wang</div>
-					  <div class='paper-venue'>ICML 2020</div>
+					  <div class='paper-title'>Self-Mimic Learning for Small-scale Pedestrian Detection</div>
+					  <div class='paper-authors'><b>Jialian Wu</b>, Chunluan Zhou, Qian Zhang, Ming Yang, and Junsong Yuan</div>
+					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
 					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2006.08198.pdf">PDF</a>
-						<a class="btn btn-confirm" target="_blank" href="https://github.com/TAMU-VITA/AGD">Code</a>
+						<a class="btn btn-confirm" target="https://cse.buffalo.edu/~jsyuan/papers/2020/SML.pdf">PDF</a>
+						<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML_supp.pdf">supp</a>
 					  </div>
 					</div>
 				</div>
-				<div class='row publication-entity'>
-					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/publication/fasterseg_iclr20.png">
-					</div>
-					<div class='col-xs-9'>
-					  <div class='paper-title'>FasterSeg: Searching for Faster Real-time Semantic Segmentation</div>
-					  <div class='paper-authors'><b>Wuyang Chen</b>, Xinyu Gong, Xianming Liu, Qian Zhang, Yuan Li, Zhangyang Wang</div>
-					  <div class='paper-venue'>ICLR 2020</div>
-					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/1912.10917.pdf">PDF</a>
-						<a class="btn btn-confirm" target="_blank" href="https://github.com/chenwydj/FasterSeg">Code</a>
-					  </div>
-					</div>
-				</div>
-				<div class='row publication-entity'>
-					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/publication/glnet_cvpr19.png">
-					</div>
-					<div class='col-xs-9'>
-					  <div class='paper-title'>Collaborative Global-Local Networks for Memory-Efficient Segmentation of Ultra-High Resolution Images</div>
-					  <div class='paper-authors'><b>Wuyang Chen*</b>, Ziyu Jiang*, Zhangyang Wang, Kexin Cui, Xiaoning Qian</div>
-					  <div class='paper-venue'>CVPR 2019 (oral)</div>
-					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/1905.06368.pdf">PDF</a>
-						<a class="btn btn-confirm" target="_blank" href="https://github.com/chenwydj/ultra_high_resolution_segmentation">Code</a>
-						<a class="btn btn-confirm" target="_blank" href="https://www.youtube.com/watch?v=am1GiItQI88">Video</a>
-					  </div>
-					</div>
-				</div>				
-				<div class='row publication-entity'>
-					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/publication/adin_wacv20.png">
-					</div>
-					<div class='col-xs-9'>
-					  <div class='paper-title'>Calibrated Domain-Invariant Learning for Highly Generalizable Large Scale Re-Identification</div>
-					  <div class='paper-authors'>Ye Yuan, <b>Wuyang Chen</b>, Tianlong Chen, Yang Yang, Zhou Ren, Zhangyang Wang, Gang Hua</div>
-					  <div class='paper-venue'>WACV 2020</div>
-					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/1911.11314.pdf">PDF</a>
-						<a class="btn btn-confirm" target="_blank" href="https://github.com/TAMU-VITA/ADIN">Code</a>
-					  </div>
-					</div>
-				</div>	
-				<div class='row publication-entity'>
-					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/publication/fatloss_cvpr20.png">
-					</div>
-					<div class='col-xs-9'>
-					  <div class='paper-title'>In Defense of the Triplet Loss Again: Learning Robust Person Re-Identification with Fast Approximated Triplet Loss and Label Distillation</div>
-					  <div class='paper-authors'>Ye Yuan, <b>Wuyang Chen</b>, Yang Yang, Zhangyang Wang</div>
-					  <!-- <div class='paper-venue'>WACV 2020</div> -->
-					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/1912.07863.pdf">PDF</a>
-						<a class="btn btn-confirm" target="_blank" href="https://github.com/TAMU-VITA/FAT">Code</a>
-					  </div>
-					</div>
-				</div>	
-				<div class='row publication-entity'>
-					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/publication/abdnet_eccv19.png">
-					</div>
-					<div class='col-xs-9'>
-					  <div class='paper-title'>ABD-Net: Attentive but Diverse Person Re-Identification</div>
-					  <div class='paper-authors'>Tianlong Chen, Shaojin Ding, Jingyi Xie, Ye Yuan, <b>Wuyang Chen</b>, Yang Yang, Zhou Ren, Zhangyang Wang</div>
-					  <div class='paper-venue'>ICCV 2019</div>
-					  <div class='paper-link'>
-							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/1908.01114.pdf">PDF</a>
-							<a class="btn btn-confirm" target="_blank" href="https://github.com/TAMU-VITA/ABD-Net">Code</a>
-					  </div>
-					</div>
-				</div>	
+
+
+
+
+
 			</div>			
 		</div>
 
-		<div class="grid3" id="talks" style="background:#ffffff">
-			<div class="grid3-header" id="talks">
-				<h3>Talks</h3>
-				<br/>
-			</div>		
-			<div class="grid3-content">
-				<ul class="graid3-ul">
-					<li class="graid3-li">
-						CVPR’19 oral presentation "Collaborative Global-Local Networks for Memory-Eﬃcient Segmentation of Ultra-high Resolution Images.", 2019.
-					</li>
-					<li class="graid3-li">
-						CVPR’19 workshop on Gigapixel Videography in Computer Vision, 2019.
-					</li>
-					<li class="graid3-li">
-						Best Student Speaker and Outstanding Researcher, <a target="_blank" href="https://csst.ucla.edu">CSST program, UCLA</a>, 2013.
-					</li>
-				</ul>
-			</div>
-		</div>
 
-		<div class="grid3" id="activity" style="background:#eee">	
-			<div class="grid3-header" id="activity">
-				<h3>Activity</h3>
-				<br/>
-			</div>		
-			<div class="grid3-content">
-				<h3>Professional Services:</h3>
-				<ul class="graid3-ul">
-					<li class="graid3-li"> Workshop Organizer: <a target="_blank" href="http://www.ug2challenge.org">UG<sup>2</sup>+, CVPR 2020</a>
-					</li>				
-					<li class="graid3-li"> Reviewer: CVPR, ICCV, WACV
-					</li>
-				</ul>
-				<h3>Awards and Honors:</h3>
-				<ul class="graid3-ul">
-					<li class="graid3-li"> Travel Award, Mathematical/Statistical approaches in DAta Science (MSDAS) Workshop, UT Dallas, 2019.
-					</li>
-					<li class="graid3-li"> Best Student Speaker and Outstanding Researcher, <a target="_blank" href="https://csst.ucla.edu">CSST program, UCLA</a>, 2013.
-					</li>
-					<li class="graid3-li"> UCLA CSST Scholarship, 2013
-					</li>	
-					<li class="graid3-li"> Gold Medal (Team Leader of 20 members) iGEM, MIT, 2012
-					</li>
-				</ul>
-				<br/>
-			</div>
-		</div>		
 
 		<div class="grid3" id="experience" style="background:#ffffff">	
 			<div class="grid3-header" id="experience">
-				<h3>Professional Experience</h3>
+				<h3>Research Experience</h3>
 				<br/>
 			</div>		
 			<div class="grid3-content">
-				<ul class="graid3-ul">
-					<li class="graid3-li">
-						Research Assistant, Visual Informatics Group, Texas A&M University, May 2018 - Present
-						<br>
-						Advisor: <a target="_blank" href="https://www.atlaswang.com/home">Prof. Zhangyang (Atlas) Wang</a>
-					</li>
-					<li class="graid3-li">
-						Research Intern, NVIDIA, Jan. 2020 - Aug. 2020
-						<br>
-						Advisor: <a target="_blank" href="https://chrisding.github.io">Dr. Zhiding Yu</a>, <a target="_blank" href="http://tensorlab.cms.caltech.edu/users/anima/">Prof. Anima Anandkumar</a>
-					</li>
-					<li class="graid3-li">
-						Research Intern, Applied AI Lab, Horizon Robotics, Mar. 2019 - Aug. 2019
-						<br>
-						Advisor: <a target="_blank" href="https://scholar.google.com/citations?user=697UEEIAAAAJ&hl=en">Dr. Xianming Liu</a>, <a target="_blank" href="https://www.linkedin.com/in/yuan-li-328bb91a">Yuan Li</a>
-					</li>
-					<li class="graid3-li">
-						Research Assistant, University of Science and Technology of China, Sep. 2013 - Jun. 2014
-						<br>
-						Advisor: <a target="_blank" href="http://biocomp.ustc.edu.cn/people/pi.php">Prof. Haiyan Liu</a>
-					</li>
-					<li class="graid3-li">
-						Research Intern, <a target="_blank" href="https://csst.ucla.edu">CSST program, UCLA</a>, Jun. 2013 - Sep. 2013
-						<br>
-						Advisor: <a target="_blank" href="https://yeateslab.mbi.ucla.edu">Prof. Todd O. Yeates</a>
-					</li>
-				</ul>
+    <ul style="list-style-type:none">
+	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+              <strong> Research Intern, Applied AI Lab, Horizon Robotics, San Francisco Bay Area.</strong> <br> </font> </p>
+	      <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+		 <em>May-August, 2020.</em> Mentor: <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>.
+	      </font> </p>
+         </li>
+
+		<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+              <strong> Research Intern, Horizon Robotics, Beijing.</strong> <br> </font> </p>
+	      <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+		 <em>May-August, 2018.</em> Mentor: <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.
+	      </font> </p>
+         </li>
+    </ul>
 			</div>
 		</div>		
 		<!-- <div class="grid2" id="contact">
@@ -360,8 +235,34 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<p>Email: williamyang AT pku.edu.com</p>			
 			</div>			
 		</div> -->
+
+				<div class="grid3" id="talks" style="background:#ffffff">
+			<div class="grid3-header" id="talks">
+				<h3>Professional Activities</h3>
+				<br/>
+			</div>
+			<div class="grid3-content">
+<ul style="list-style-type:none">
+
+	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+              <strong> Conference Reviewer </strong> <br> </font> </p>
+	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+		 CVPR 2020, WACV 2021, ACCV 2020
+	      </font> </p>
+         </li>
+
+	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+              <strong> Journal Reviewer </strong> <br> </font> </p>
+	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+		 IEEE Transactions on Image Processing
+	      </font> </p>
+         </li>
+				</ul>
+			</div>
+		</div>
+
 		<div class="footer">
-			<p>2019 Wuyang Chen. Powered by <a href="https://williamyang1991.github.io/">Shuai Yang</a></p>
+			<p>© Jialian Wu | Last updated: Aug. 2020</p>
 		</div>
 	</div>
 	
