--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Wuyang Chen</title>
+		<title>Jialian Wu, State University of New York at Buffalo</title>
 		<link href="./css/bootstrap.css" rel="stylesheet" type="text/css"  media="all" />
 		<link href="./css/style.css" rel="stylesheet" type="text/css"  media="all" />
 		<link href="./css/prettyPhoto.css" rel="stylesheet" type="text/css"  media="all" />		
