--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!---start-top-nav--->
 			<div class="top-nav">
 				<ul>
-					<li id="Me" class="active" onclick="func('Me')"><a href="#me" class="scroll">Me</a></li>
-					<li id="Education" onclick="func('Education')"><a href="#education" class="scroll">Education</a></li>
-					<li id="Research" onclick="func('Research')"><a href="#research" class="scroll">Research</a></li>
+<!--					<li id="Me" class="active" onclick="func('Me')"><a href="#me" class="scroll">Me</a></li>-->
+					<li id="Education" onclick="func('Education')"><a href="#education" class="scroll">Bio</a></li>
 					<li id="Publication" onclick="func('Publication')"><a href="#publication" class="scroll">Publication</a></li>
-					<li id="Talks" onclick="func('Talks')"><a href="#talks" class="scroll">Talks</a></li>
-					<li id="Activity" onclick="func('Activity')"><a href="#activity" class="scroll">Activity</a></li>
 					<li id="Experience" onclick="func('Experience')"><a href="#experience" class="scroll">Experience</a></li>
+					<li id="Professional_Activities" onclick="func('Professional Activities')"><a href="#Professional_Activities" class="scroll">Professional Activities</a></li>
+<!--					<li id="Activity" onclick="func('Activity')"><a href="#activity" class="scroll">Activity</a></li>-->
 					<!-- <li id="Contact" onclick="func('Contact')"><a href="#contact" class="scroll">Contact</a></li> -->
 				</ul>
 			</div>
@@ -236,8 +235,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>			
 		</div> -->
 
-				<div class="grid3" id="talks" style="background:#ffffff">
-			<div class="grid3-header" id="talks">
+				<div class="grid3" id="Professional_Activities" style="background:#ffffff">
+			<div class="grid3-header" id="Professional_Activities">
 				<h3>Professional Activities</h3>
 				<br/>
 			</div>
