--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		<div class="grid3" id="publication">
 			<div class="grid3-header">
-				<h3>Publication</h3>
+				<h3>Publications</h3>
 				<!-- <p>For full publication list, please visit my  -->
 				<!-- <a class="grid2-herf"  href="publication.html">publication page</a> or -->
 				<!-- <a class="grid2-herf"  target="_blank"  href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en">google scholar</a> -->
