--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="wrap">
 			<!---start-logo--->
 			<div class="logo">
-				<a href="#">Jialian Wu</a>
+				<a href="#">Jialian Wu (<font face="KaiTi">吴嘉濂</font>)</a>
 			</div>
 			<!---End-logo--->
 			<!---start-top-nav--->
@@ -64,6 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- <a class="welcome-photo1"><img id="me1" src="./images/Wuyang_Chen.png" title="name" /></a> -->
 			</div>
 			<h3>Jialian Wu</h3>
+			<br>
 			<p>
 				Ph.D. Candidate
 				<br>
