--- a/index.html
+++ b/index.html
@@ -86,17 +86,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br/>
 			</div>
 			<div class="grid3-content">
-				<div class="grid3-content">
-					<ul class="graid3-ul">
-						<li class="graid3-li"> Ph.D. student, State University of New York at Buffalo, 2019 - present
-							<br>advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>
-						</li>
-						<li class="graid3-li"> M.S. study, Tianjin Univeristy, 2018-2019 (drop)
-						</li>
-						<li class="graid3-li"> B.Eng. Degree, Tianjin University, 2014-2018</li>
-						</li>
+
+					<ul class="graid3-ul" style="list-style-type:none">
+						I am a first-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
+Before that, I spent one year on the M.S. study at Tianjin University during 2018-2019 and left for UB in July 2019 before finishing my degree.
+I received B.Eng. degree from Tianjin University in 2018. My current research interest is object recognition including detection, segmentatoin, and tracking.
+<!--						<li class="graid3-li"> Ph.D. student, State University of New York at Buffalo, 2019 - present-->
+<!--							<br>advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>-->
+<!--						</li>-->
+<!--						<li class="graid3-li"> M.S. study, Tianjin Univeristy, 2018-2019 (drop)-->
+<!--						</li>-->
+<!--						<li class="graid3-li"> B.Eng. Degree, Tianjin University, 2014-2018</li>-->
+<!--						</li>-->
 					</ul>
-				</div>
+
 			</div>
 		</div>
 
