--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br/>
 			</div>
 			<div class="grid3-content">
-
+				<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
 						I am a first-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 Before that, I spent one year on the M.S. study at Tianjin University during 2018-2019 and left for UB in July 2019 before finishing my degree.
