--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br/>
 			</div>
 			<div class="grid3-content">
-				<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
 						I am a first-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 Before that, I spent one year on the M.S. study at Tianjin University during 2018-2019 and left for UB in July 2019 before finishing my degree.
@@ -99,7 +98,6 @@ I received B.Eng. degree from Tianjin University in 2018. My current research in
 <!--						<li class="graid3-li"> B.Eng. Degree, Tianjin University, 2014-2018</li>-->
 <!--						</li>-->
 					</ul>
-
 			</div>
 		</div>
 
@@ -263,6 +261,10 @@ I received B.Eng. degree from Tianjin University in 2018. My current research in
 				</ul>
 			</div>
 		</div>
+
+<!--		<center>-->
+<!--		<a href="https://clustrmaps.com/site/1bca3" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=m&d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU&co=2d78ad&ct=ffffff" /></a>-->
+<!--	</center>-->
 
 		<div class="footer">
 			<p>© Jialian Wu | Last updated: Aug. 2020</p>
