--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
 						I am a first-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
-Before that, I spent one year for M.S. study at Tianjin University during 2018-2019 and left for UB in July 2019 before finishing my degree.
-I received B.Eng. degree from Tianjin University in 2018. My current research interest is object recognition including detection, segmentatoin, and tracking.
+						Before that, I spent one year for M.S. study at Tianjin University during 2018-2019 and left for UB in July 2019 before finishing my degree.
+						I received B.Eng. degree from Tianjin University in 2018. I had a great research time at Horizon Robotics working with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>
+						and Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.
+						My current research interest is object recognition including detection, segmentatoin, and tracking.
 <!--						<li class="graid3-li"> Ph.D. student, State University of New York at Buffalo, 2019 - present-->
 <!--							<br>advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>-->
 <!--						</li>-->
