--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-authors'><b>Jialian Wu</b>, Chunluan Zhou, Qian Zhang, Ming Yang, and Junsong Yuan</div>
 					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
 					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="https://cse.buffalo.edu/~jsyuan/papers/2020/SML.pdf">PDF</a>
+						  <a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML.pdf">supp</a>
 						<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML_supp.pdf">supp</a>
 					  </div>
 					</div>
