--- a/index.html
+++ b/index.html
@@ -215,21 +215,34 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br/>
 			</div>		
 			<div class="grid3-content">
-    <ul style="list-style-type:none">
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-              <strong> Research Intern, Applied AI Lab, Horizon Robotics, San Francisco Bay Area.</strong> <br> </font> </p>
-	      <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-		 <em>May-August, 2020.</em> Mentor: <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>.
-	      </font> </p>
-         </li>
 
-		<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-              <strong> Research Intern, Horizon Robotics, Beijing.</strong> <br> </font> </p>
-	      <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-		 <em>May-August, 2018.</em> Mentor: <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.
-	      </font> </p>
-         </li>
-    </ul>
+<!--    <ul style="list-style-type:none">-->
+<!--	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
+<!--              <strong> Research Intern, Applied AI Lab, Horizon Robotics, San Francisco Bay Area.</strong> <br> </font> </p>-->
+<!--	      <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
+<!--		 <em>May-August, 2020.</em> Mentor: <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>.-->
+<!--	      </font> </p>-->
+<!--         </li>-->
+
+<!--		<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
+<!--              <strong> Research Intern, Horizon Robotics, Beijing.</strong> <br> </font> </p>-->
+<!--	      <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
+<!--		 <em>May-August, 2018.</em> Mentor: <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.-->
+<!--	      </font> </p>-->
+<!--         </li>-->
+<!--    </ul>-->
+				<ul class="graid3-ul">
+					<li class="graid3-li">
+						Research Intern, Applied AI Lab, Horizon Robotics, San Francisco Bay Area.
+						<br>
+						<em>May-August, 2020.</em> Mentor: Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>.
+					</li>
+					<li class="graid3-li">
+						Research Intern, Horizon Robotics, Beijing.
+						<br>
+						<em>May-August, 2018.</em> Mentor: Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.
+					</li>
+				</ul>
 			</div>
 		</div>		
 		<!-- <div class="grid2" id="contact">
@@ -245,22 +258,36 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br/>
 			</div>
 			<div class="grid3-content">
-<ul style="list-style-type:none">
+<!--<ul style="list-style-type:none">-->
 
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-              <strong> Conference Reviewer </strong> <br> </font> </p>
-	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-		 CVPR 2020, WACV 2021, ACCV 2020
-	      </font> </p>
-         </li>
+<!--	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
+<!--              <strong> Conference Reviewer </strong> <br> </font> </p>-->
+<!--	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
+<!--		 CVPR 2020, WACV 2021, ACCV 2020-->
+<!--	      </font> </p>-->
+<!--         </li>-->
 
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-              <strong> Journal Reviewer </strong> <br> </font> </p>
-	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-		 IEEE Transactions on Image Processing
-	      </font> </p>
-         </li>
+<!--	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
+<!--              <strong> Journal Reviewer </strong> <br> </font> </p>-->
+<!--	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">-->
+<!--		 IEEE Transactions on Image Processing-->
+<!--	      </font> </p>-->
+<!--         </li>-->
+<!--				</ul>-->
+
+				<ul class="graid3-ul">
+					<li class="graid3-li">
+						Conference Reviewer
+						<br>
+						CVPR 2020, WACV 2021, ACCV 2020
+					</li>
+					<li class="graid3-li">
+						Journal Reviewe
+						<br>
+						IEEE Transactions on Image Processing
+					</li>
 				</ul>
+
 			</div>
 		</div>
 
