--- a/index.html
+++ b/index.html
@@ -208,8 +208,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 
 
-
-		<div class="grid3" id="experience" style="background:#ffffff">	
+		<div class="grid3" id="experience" style="background:#ffffff">
 			<div class="grid3-header" id="experience">
 				<h3>Research Experience</h3>
 				<br/>
@@ -285,18 +284,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						Journal Reviewe
 						<br>
 						IEEE Transactions on Image Processing
+
 					</li>
 				</ul>
 
 			</div>
 		</div>
 
+		<center>
+		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?&w=150&t=n&d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU"></script>
+		</center>
+
+<!--		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU"></script>-->
+<!--		<script type="text/javascript" src="//rf.revolvermaps.com/0/0/2.js?i=5i2hthx26xw&amp;m=8&amp;s=130&amp;c=ff0000&amp;t=1" async="async"></script>-->
+<!--		<script type="text/javascript"  src="//cdn.clustrmaps.com/globe.js?d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU" async="async"></script>-->
+
 <!--		<center>-->
 <!--		<a href="https://clustrmaps.com/site/1bca3" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=m&d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU&co=2d78ad&ct=ffffff" /></a>-->
 <!--	</center>-->
 
 		<div class="footer">
-			<p>© Jialian Wu | Last updated: Aug. 2020</p>
+			<p>© Jialian Wu | Last updated: Aug. 2020 </p>
 		</div>
 	</div>
 	
