--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="wrap">
 			<!---start-logo--->
 			<div class="logo">
-				<a href="#">Jialian Wu (<font face="KaiTi">吴嘉濂</font>)</a>
+				<a href="#">Jialian Wu</a>
 			</div>
 			<!---End-logo--->
 			<!---start-top-nav--->
@@ -57,13 +57,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</script> 
 	
 		<!---End-wrap--->
+
 	<div class="content">
-		<div class="grid1" id="me">
-			<div class="welcome-photo">
-				<img src="./images/jialian.jpg" title="name" />
-				<!-- <a class="welcome-photo1"><img id="me1" src="./images/Wuyang_Chen.png" title="name" /></a> -->
-			</div>
-			<h3>Jialian Wu</h3>
+		<div class="container">
+  <div class="image">
+    <img src="./images/jialian.jpg">
+  </div>
+  <div class="text">
+    			<h3>Jialian Wu (<font face="KaiTi">吴嘉濂</font>)</h3>
 			<br>
 			<p>
 				Ph.D. Candidate
@@ -79,7 +80,34 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				[<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]
 				[<a href="https://drive.google.com/file/d/1Tp7hLu1LOSbvv7rimGRlCaViEG7mMrpu/view?usp=sharing">Curriculum Vitae</a>]
 			</p>
-		</div>
+  </div>
+</div>
+
+
+<!--		<div class="grid1" id="me">-->
+<!--			<h3>Jialian Wu</h3>-->
+<!--			<br>-->
+<!--			<p>-->
+<!--				Ph.D. Candidate-->
+<!--				<br>-->
+<!--				State University of New York at Buffalo-->
+<!--				<br>-->
+<!--				jialianw at buffalo dot edu-->
+<!--			</p>-->
+<!--			<p style="padding: 10px 0px 0px 0px;">-->
+<!--&lt;!&ndash;				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>&ndash;&gt;-->
+<!--&lt;!&ndash;				<a target="_blank" href="https://github.com/chenwydj"><img src="./images/github.png" title="name" style="width:5%"/></a>&ndash;&gt;-->
+<!--				&lt;!&ndash; <a target="_blank" href="mailto:wuyang.chen@tamu.edu"><img src="./images/email.png" title="name" style="width:5%"/></a> &ndash;&gt;-->
+<!--				[<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]-->
+<!--				[<a href="https://drive.google.com/file/d/1Tp7hLu1LOSbvv7rimGRlCaViEG7mMrpu/view?usp=sharing">Curriculum Vitae</a>]-->
+<!--			</p>-->
+
+<!--			<div class="welcome-photo">-->
+<!--				<img src="./images/jialian.jpg" title="name" />-->
+<!--				&lt;!&ndash; <a class="welcome-photo1"><img id="me1" src="./images/Wuyang_Chen.png" title="name" /></a> &ndash;&gt;-->
+<!--			</div>-->
+<!--		</div>-->
+
 		<div class="grid3" id="education">
 			<div class="grid3-header">
 				<h3>Short Bio</h3>
