--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="content">
 		<div class="container">
   <div class="image">
-    <img src="./images/jialian.jpg", width="300">
+    <img src="./images/jialian.jpg">
   </div>
   <div class="text">
     			<h3>Jialian Wu (<font face="KaiTi">吴嘉濂</font>)</h3>
