--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						CVPR 2020, WACV 2021, ACCV 2020
 					</li>
 					<li class="graid3-li">
-						Journal Reviewe
+						Journal Reviewer
 						<br>
 						IEEE Transactions on Image Processing
 
