--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
   <div class="image">
     <img src="./images/jialian.jpg">
+
+    <figure>
+	  	<audio
+        controls loop
+        src="./audio/demo.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    	</audio>
+	  	<figcaption>Enjoy some musics ：)</figcaption>
+	</figure>
+
   </div>
   <div class="text">
     			<h3>Jialian Wu (<font face="KaiTi">吴嘉濂</font>)</h3>
@@ -108,6 +119,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--			</div>-->
 <!--		</div>-->
 
+<!--		<embed src="C:\\CloudMusic\\demo.mp3" hidden="false" autostart="true" loop="true"><\embed>-->
+
+<!--		<div class="grid3" id="music">-->
+
 		<div class="grid3" id="education">
 			<div class="grid3-header">
 				<h3>Short Bio</h3>
@@ -119,7 +134,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						Before that, I spent one year for M.S. study at Tianjin University during 2018-2019 and left for UB in July 2019 before finishing my degree.
 						I received B.Eng. degree from Tianjin University in 2018. I had a great research time at Horizon Robotics working with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>
 						and Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.
-						My current research interest is object recognition including detection, segmentatoin, and tracking.
+						My current research interest is object recognition including detection, segmentatoin, and tracking. Beside research, I enjoy various of musics.
 <!--						<li class="graid3-li"> Ph.D. student, State University of New York at Buffalo, 2019 - present-->
 <!--							<br>advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>-->
 <!--						</li>-->
