--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <figure>
 	  	<audio
         controls loop
-        src="./audio/audio1.mp3">
+        src="./audio/audio.mp3">
             Your browser does not support the
             <code>audio</code> element.
     	</audio>
