--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--				<a target="_blank" href="https://github.com/chenwydj"><img src="./images/github.png" title="name" style="width:5%"/></a>-->
 				<!-- <a target="_blank" href="mailto:wuyang.chen@tamu.edu"><img src="./images/email.png" title="name" style="width:5%"/></a> -->
 				[<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]
-				[<a href="https://drive.google.com/file/d/1sNRUbglGHZbQ1UEmP5DOuuHgj0Glq1X6/view?usp=sharing">Curriculum Vitae</a>]
+<!--				[<a href="https://drive.google.com/file/d/1sNRUbglGHZbQ1UEmP5DOuuHgj0Glq1X6/view?usp=sharing">Curriculum Vitae</a>]-->
+				[<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>]
 			</p>
   </div>
 </div>
@@ -321,7 +322,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer
 						<br>
-						CVPR 2020, WACV 2021, ACCV 2020
+						CVPR 2020, IJICAI 2021,, WACV 2021, ACCV 2020
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer
