--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer
 						<br>
-						CVPR 2020, IJICAI 2021,, WACV 2021, ACCV 2020
+						CVPR 2020, ACCV 2020, IJICAI 2021, WACV 2021,
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer
