--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer
 						<br>
-						CVPR'20, AAAI'21, IJICAI'21, ACCV'20, WACV'21,
+						CVPR'20, AAAI'21, IJCAI'21, ACCV'20, WACV'21,
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer
