--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<link rel="shortcut icon" href="images/ub.ico" type="image/x-icon" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Jialian Wu, State University of New York at Buffalo</title>
 		<link href="./css/bootstrap.css" rel="stylesheet" type="text/css"  media="all" />
@@ -62,16 +63,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
   <div class="image">
     <img src="./images/jialian.jpg">
-
-    <figure>
-	  	<audio
-        controls loop
-        src="./audio/audio.mp3">
-            Your browser does not support the
-            <code>audio</code> element.
-    	</audio>
-	  	<figcaption>Enjoy some music ：)</figcaption>
-	</figure>
 
   </div>
   <div class="text">
