--- a/index.html
+++ b/index.html
@@ -235,6 +235,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
+					  <img class="paper-image" src="images/aaai21.png" width="300" height="130">
+					</div>
+					<div class='col-xs-9'>
+					  <div class='paper-title'>Robust Knowledge Transfer via Hybrid Forward on the Teacher-Student Model</div>
+					  <div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
+					  <div class='paper-venue'>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2021.</div>
+						<div class='paper-link'>
+						  <a class="btn btn-confirm" target="_blank">Comming soon</a>
+					  </div>
+					</div>
+				</div>
+
 
 
 
