--- a/index.html
+++ b/index.html
@@ -337,7 +337,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</li>
 				</ul>
 
+
 			</div>
+
+					<div class="grid3" id="Awards" style="background:#ffffff">
+			<div class="grid3-header" id="Awards">
+				<h3>Awards</h3>
+				<br/>
+			</div>
+			<div class="grid3-content">
+
+				<ul class="graid3-ul">
+					<li class="graid3-li">
+						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/graduate-student-award-recipients.html">Best First Year Achiever Award</a>, 2020, CSE, State University of New York at Buffalo
+					</li>
+				</ul>
+
 		</div>
 
 		<center>
@@ -353,7 +368,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--	</center>-->
 
 		<div class="footer">
-			<p>© Jialian Wu | Last updated: Sept. 2020 </p>
+			<p>© Jialian Wu | Last updated: Dec. 2020 </p>
 		</div>
 	</div>
 	
