--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
 					  <div class='paper-venue'>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2021.</div>
 						<div class='paper-link'>
-						  <a class="btn btn-confirm" target="_blank">Comming soon</a>
+						  <a class="btn btn-confirm" target="_blank">Coming soon</a>
 					  </div>
 					</div>
 				</div>
