--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
 						I am a second-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
-						Before that, I spent one year for M.S. study at Tianjin University during 2018-2019 and left for UB in July 2019 before finishing my degree.
-						I received B.Eng. degree from Tianjin University in 2018. I had a great research time at Horizon Robotics working with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>
+						Before that, I studied towards M.Eng. at Tianjin University during 2018-2019 and left for UB in 2019 before finishing my degree.
+						I received B.Eng. from Tianjin University in 2018. I had a great research time at Horizon Robotics working with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>
 						and Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.
 						My current research interest is object-centric video analysis including detection, segmentatoin, and tracking.
 <!--						<li class="graid3-li"> Ph.D. student, State University of New York at Buffalo, 2019 - present-->
@@ -349,7 +349,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<ul class="graid3-ul">
 					<li class="graid3-li">
-						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/graduate-student-award-recipients.html">Best First Year Achiever Award</a>, 2020, CSE, State University of New York at Buffalo
+						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/graduate-student-award-recipients.html">Best CSE First Year Achiever Award</a>, State University of New York at Buffalo, 2020.
+					</li>
+				</ul>
+				<ul class="graid3-ul">
+					<li class="graid3-li">
+						Tianjin City Fellowship, 2016.
 					</li>
 				</ul>
 
